Implementação dos testes de integração

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -3,44 +3,44 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>Centro Ortopédico Ingá</title>
-	<link rel="stylesheet" href="/themes/base/jquery.ui.all.css"/>
-	<link rel="stylesheet" href="/themes/smoothness/jquery-ui.css"/>
-	<link rel="stylesheet" href="/css/global.css"/>
-	<script type="text/javascript" src="/js/jquery-1.9.1.js"></script>
-	<script type="text/javascript" src="/js/ui/jquery-ui.js"></script>
-	<script type="text/javascript" src="/js/noty/jquery.noty.js"></script>
-	<script type="text/javascript" src="/js/noty/layouts/top.js"></script>
-	<script type="text/javascript" src="/js/noty/layouts/center.js"></script>
-	<script type="text/javascript" src="/js/noty/themes/default.js"></script>
-	<script type="text/javascript" src="/js/underscore.js"></script>
-	<script type="text/javascript" src="/js/backbone.js"></script>
-	<script type="text/javascript" src="/js/backbone.marionette.js"></script>
-	<script type="text/javascript" src="/js/Backbone.ModelBinder.js"></script>
-	<script type="text/javascript" src="/js/backbone.paginator.js"></script>
-	<script type="text/javascript" src="/js/deep-model.js"></script>
-	<script type="text/javascript" src="/js/autoNumeric.js"></script>
-	<script type="text/javascript" src="/js/jquery.fileupload.js"></script>
-	<script type="text/javascript" src="/js/coi-utils.js"></script>
-	<script type="text/javascript" src="/js/coi.js"></script>
-	<script type="text/javascript" src="/js/coi-categorias.js"></script>
-	<script type="text/javascript" src="/js/coi-categoria.js"></script>
-	<script type="text/javascript" src="/js/coi-pessoas.js"></script>
-	<script type="text/javascript" src="/js/coi-pessoa.js"></script>
-	<script type="text/javascript" src="/js/coi-entradas.js"></script>
-	<script type="text/javascript" src="/js/coi-entrada.js"></script>
-	<script type="text/javascript" src="/js/coi-cheques.js"></script>
-	<script type="text/javascript" src="/js/coi-cheque.js"></script>
-	<script type="text/javascript" src="/js/coi-laudos.js"></script>
-	<script type="text/javascript" src="/js/coi-laudo.js"></script>
-	<script type="text/javascript" src="/js/coi-estoque.js"></script>
-	<script type="text/javascript" src="/js/coi-movimento.js"></script>
-	<script type="text/javascript" src="/js/coi-pagamentos.js"></script>
-	<script type="text/javascript" src="/js/coi-pagamento.js"></script>
-	<script type="text/javascript" src="/js/coi-pagamentos-categorias.js"></script>
-	<script type="text/javascript" src="/js/coi-pagamentos-categoria.js"></script>
-	<script type="text/javascript" src="/js/coi-fechamentos.js"></script>
-	<script type="text/javascript" src="/js/coi-fechamento.js"></script>
-	<script type="text/javascript" src="/js/coi-start.js"></script>
+	<link rel="stylesheet" href="themes/base/jquery.ui.all.css"/>
+	<link rel="stylesheet" href="themes/smoothness/jquery-ui.css"/>
+	<link rel="stylesheet" href="css/global.css"/>
+	<script type="text/javascript" src="js/jquery-1.9.1.js"></script>
+	<script type="text/javascript" src="js/ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="js/noty/jquery.noty.js"></script>
+	<script type="text/javascript" src="js/noty/layouts/top.js"></script>
+	<script type="text/javascript" src="js/noty/layouts/center.js"></script>
+	<script type="text/javascript" src="js/noty/themes/default.js"></script>
+	<script type="text/javascript" src="js/underscore.js"></script>
+	<script type="text/javascript" src="js/backbone.js"></script>
+	<script type="text/javascript" src="js/backbone.marionette.js"></script>
+	<script type="text/javascript" src="js/Backbone.ModelBinder.js"></script>
+	<script type="text/javascript" src="js/backbone.paginator.js"></script>
+	<script type="text/javascript" src="js/deep-model.js"></script>
+	<script type="text/javascript" src="js/autoNumeric.js"></script>
+	<script type="text/javascript" src="js/jquery.fileupload.js"></script>
+	<script type="text/javascript" src="js/coi-utils.js"></script>
+	<script type="text/javascript" src="js/coi.js"></script>
+	<script type="text/javascript" src="js/coi-categorias.js"></script>
+	<script type="text/javascript" src="js/coi-categoria.js"></script>
+	<script type="text/javascript" src="js/coi-pessoas.js"></script>
+	<script type="text/javascript" src="js/coi-pessoa.js"></script>
+	<script type="text/javascript" src="js/coi-entradas.js"></script>
+	<script type="text/javascript" src="js/coi-entrada.js"></script>
+	<script type="text/javascript" src="js/coi-cheques.js"></script>
+	<script type="text/javascript" src="js/coi-cheque.js"></script>
+	<script type="text/javascript" src="js/coi-laudos.js"></script>
+	<script type="text/javascript" src="js/coi-laudo.js"></script>
+	<script type="text/javascript" src="js/coi-estoque.js"></script>
+	<script type="text/javascript" src="js/coi-movimento.js"></script>
+	<script type="text/javascript" src="js/coi-pagamentos.js"></script>
+	<script type="text/javascript" src="js/coi-pagamento.js"></script>
+	<script type="text/javascript" src="js/coi-pagamentos-categorias.js"></script>
+	<script type="text/javascript" src="js/coi-pagamentos-categoria.js"></script>
+	<script type="text/javascript" src="js/coi-fechamentos.js"></script>
+	<script type="text/javascript" src="js/coi-fechamento.js"></script>
+	<script type="text/javascript" src="js/coi-start.js"></script>
 	
 	<script type="text/template" id="coi_view_text_template">
 <dt><%= label %></dt>
