[4989923] Nomenclatura das vértebras lombares

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -491,10 +491,10 @@ Fêmur total - é utilizado a DMO
 					<td>
 						<span>Coluna Lombar</span>
 						<div>
-							<label><input type="checkbox" name="colunaLombarL1"> T1</label>
-							<label><input type="checkbox" name="colunaLombarL2"> T2</label>
-							<label><input type="checkbox" name="colunaLombarL3"> T3</label>
-							<label><input type="checkbox" name="colunaLombarL4"> T4</label>
+							<label><input type="checkbox" name="colunaLombarL1"> L1</label>
+							<label><input type="checkbox" name="colunaLombarL2"> L2</label>
+							<label><input type="checkbox" name="colunaLombarL3"> L3</label>
+							<label><input type="checkbox" name="colunaLombarL4"> L4</label>
 						</div>
 					</td>
 					<td><input type="text" name="colunaLombarDensidade"/></td>
