[4989923] Inclusão de mais um ítem na observação

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -407,25 +407,27 @@
 <option data-code="1" data-value="Presença de alterações estruturais na coluna lombar que podem superestimar a real densidade óssea vertebral">
 	1 - Presença de alterações estruturais...</option>
 <option data-code="2" data-value="À critério clínico, sugerimos estudo radiográfico da coluna lombar para avaliar fraturas ou alterações degenerativas, devido à diferença de densidade mineral óssea observada entre ({}). Na presença de fraturas vertebrais, considerar o diagnóstico de osteoporose, independente dos valores da densitometria">
-	2 - À critério clínico, sugerimos estudo radiográfico...</option> 
-<option data-code="3" data-value="Devido à presença de alterações estruturais na coluna lombar procedemos a análise no antebraço">
-	3 - Devido à presença de alterações estruturais...</option>
-<option data-code="4" data-value="Presença de artefato ao nível de {}">
-	4 - Presença de artefato ao nível de...</option>
-<option data-code="5" data-value="Presença de vértebra de transição (VT)">
-	5 - Presença de vértebra de transição...</option>
-<option data-code="6" data-value="Devido dificuldade de rotação do quadril ou presença de material cirúrgico, não foi possível análise válida do fêmur direito. Por esse motivo, procedemos a análise de fêmur esquerdo">
-	6 - Devido dificuldade de rotação do quadril... fêmur direito...</option>
-<option data-code="7" data-value="Devido dificuldade de rotação do quadril ou presença de material cirúrgico, não foi possível análise válida de fêmur, tanto a direita quanto a esquerda">
-	7 - Devido dificuldade de rotação do quadril... ambos...</option>
-<option data-code="8" data-value="Sugerimos densitometria óssea de antebraço (Radio 33%)">
-	8 - Sugerimos densitometria óssea...</option>
-<option data-code="9" data-value="Presença de alterações estruturais no quadril que podem superestimar a real densidade óssea do fêmur">
-	9 - Presença de alterações estruturais...</option>
-<option data-code="10" data-value="Sugerimos afastar causa secundária de baixa densidade óssea para a idade">
-	10 - Sugerimos afastar causa secundária... baixa densidade...</option>
-<option data-code="11" data-value="Sugerimos afastar causa secundária de osteoporose (Z-score <= -2)">
-	11 - Sugerimos afastar causa secundária... osteoporose...</option>
+	2 - À critério clínico, sugerimos estudo radiográfico... Na presença...</option> 
+<option data-code="3" data-value="À critério clínico, sugerimos estudo radiográfico da coluna lombar para avaliar fraturas ou alterações degenerativas, devido à diferença de densidade mineral óssea observada entre ({})">
+	3 - À critério clínico, sugerimos estudo radiográfico...</option> 
+<option data-code="4" data-value="Devido à presença de alterações estruturais na coluna lombar procedemos a análise no antebraço">
+	4 - Devido à presença de alterações estruturais...</option>
+<option data-code="5" data-value="Presença de artefato ao nível de {}">
+	5 - Presença de artefato ao nível de...</option>
+<option data-code="6" data-value="Presença de vértebra de transição (VT)">
+	6 - Presença de vértebra de transição...</option>
+<option data-code="7" data-value="Devido dificuldade de rotação do quadril ou presença de material cirúrgico, não foi possível análise válida do fêmur direito. Por esse motivo, procedemos a análise de fêmur esquerdo">
+	7 - Devido dificuldade de rotação do quadril... fêmur direito...</option>
+<option data-code="8" data-value="Devido dificuldade de rotação do quadril ou presença de material cirúrgico, não foi possível análise válida de fêmur, tanto a direita quanto a esquerda">
+	8 - Devido dificuldade de rotação do quadril... ambos...</option>
+<option data-code="9" data-value="Sugerimos densitometria óssea de antebraço (Radio 33%)">
+	9 - Sugerimos densitometria óssea...</option>
+<option data-code="10" data-value="Presença de alterações estruturais no quadril que podem superestimar a real densidade óssea do fêmur">
+	10 - Presença de alterações estruturais...</option>
+<option data-code="11" data-value="Sugerimos afastar causa secundária de baixa densidade óssea para a idade">
+	11 - Sugerimos afastar causa secundária... baixa densidade...</option>
+<option data-code="12" data-value="Sugerimos afastar causa secundária de osteoporose (Z-score <= -2)">
+	12 - Sugerimos afastar causa secundária... osteoporose...</option>
 		</select>
 		<button id="adicionar-observacao" class="coi-action-include">Incluir</button>
 		<table id="observacoes-list"/>
