[4989923] Intervalo de vértebras

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -406,9 +406,9 @@
 			<option/>
 <option data-code="1" data-value="Presença de alterações estruturais na coluna lombar que podem superestimar a real densidade óssea vertebral">
 	1 - Presença de alterações estruturais...</option>
-<option data-code="2" data-value="À critério clínico, sugerimos estudo radiográfico da coluna lombar para avaliar fraturas ou alterações degenerativas, devido à diferença de densidade mineral óssea observada entre ({}). Na presença de fraturas vertebrais, considerar o diagnóstico de osteoporose, independente dos valores da densitometria">
+<option data-code="2" data-value="À critério clínico, sugerimos estudo radiográfico da coluna lombar para avaliar fraturas ou alterações degenerativas, devido à diferença de densidade mineral óssea observada entre {}. Na presença de fraturas vertebrais, considerar o diagnóstico de osteoporose, independente dos valores da densitometria">
 	2 - À critério clínico, sugerimos estudo radiográfico... Na presença...</option> 
-<option data-code="3" data-value="À critério clínico, sugerimos estudo radiográfico da coluna lombar para avaliar fraturas ou alterações degenerativas, devido à diferença de densidade mineral óssea observada entre ({})">
+<option data-code="3" data-value="À critério clínico, sugerimos estudo radiográfico da coluna lombar para avaliar fraturas ou alterações degenerativas, devido à diferença de densidade mineral óssea observada entre {}">
 	3 - À critério clínico, sugerimos estudo radiográfico...</option> 
 <option data-code="4" data-value="Devido à presença de alterações estruturais na coluna lombar procedemos a análise no antebraço">
 	4 - Devido à presença de alterações estruturais...</option>
