[4989923] Refatoração do cadastro de observações e conclusões

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -402,33 +402,7 @@
 <dl class="coi-form-item">
 	<dt>Observações:</dt>
 	<dd>
-		<select id="observacoes">
-			<option/>
-<option data-code="1" data-value="Presença de alterações estruturais na coluna lombar que podem superestimar a real densidade óssea vertebral">
-	1 - Presença de alterações estruturais...</option>
-<option data-code="2" data-value="À critério clínico, sugerimos estudo radiográfico da coluna lombar para avaliar fraturas ou alterações degenerativas, devido à diferença de densidade mineral óssea observada entre {}. Na presença de fraturas vertebrais, considerar o diagnóstico de osteoporose, independente dos valores da densitometria">
-	2 - À critério clínico, sugerimos estudo radiográfico... Na presença...</option> 
-<option data-code="3" data-value="À critério clínico, sugerimos estudo radiográfico da coluna lombar para avaliar fraturas ou alterações degenerativas, devido à diferença de densidade mineral óssea observada entre {}">
-	3 - À critério clínico, sugerimos estudo radiográfico...</option> 
-<option data-code="4" data-value="Devido à presença de alterações estruturais na coluna lombar procedemos a análise no antebraço">
-	4 - Devido à presença de alterações estruturais...</option>
-<option data-code="5" data-value="Presença de artefato ao nível de {}">
-	5 - Presença de artefato ao nível de...</option>
-<option data-code="6" data-value="Presença de vértebra de transição (VT)">
-	6 - Presença de vértebra de transição...</option>
-<option data-code="7" data-value="Devido dificuldade de rotação do quadril ou presença de material cirúrgico, não foi possível análise válida do fêmur direito. Por esse motivo, procedemos a análise de fêmur esquerdo">
-	7 - Devido dificuldade de rotação do quadril... fêmur direito...</option>
-<option data-code="8" data-value="Devido dificuldade de rotação do quadril ou presença de material cirúrgico, não foi possível análise válida de fêmur, tanto a direita quanto a esquerda">
-	8 - Devido dificuldade de rotação do quadril... ambos...</option>
-<option data-code="9" data-value="Sugerimos densitometria óssea de antebraço (Radio 33%)">
-	9 - Sugerimos densitometria óssea...</option>
-<option data-code="10" data-value="Presença de alterações estruturais no quadril que podem superestimar a real densidade óssea do fêmur">
-	10 - Presença de alterações estruturais...</option>
-<option data-code="11" data-value="Sugerimos afastar causa secundária de baixa densidade óssea para a idade">
-	11 - Sugerimos afastar causa secundária... baixa densidade...</option>
-<option data-code="12" data-value="Sugerimos afastar causa secundária de osteoporose (Z-score <= -2)">
-	12 - Sugerimos afastar causa secundária... osteoporose...</option>
-		</select>
+		<select id="observacoes"></select>
 		<button id="adicionar-observacao" class="coi-action-include">Incluir</button>
 		<table id="observacoes-list"/>
 	<dd>
@@ -436,36 +410,7 @@
 <dl class="coi-form-item">
 	<dt>Comparação com exames anteriores:</dt>
 	<dd>
-		<select id="comparacoes">
-			<option/>
-<option data-code="1" data-value="Não há exames anteriores neste serviço para comparação">
-	1 - Não há exames anteriores...</option>
-<option data-code="2" data-value="Comparação com densitometria óssea de {}:
-Coluna lombar (L1-L4) - é utilizado a DMO
-Fêmur total - é utilizado a DMO
-* Não compara-se radio 33% ou colo de fêmur">
-	2 - Comparação com densitometria óssea de...</option>
-<option data-code="3" data-value="Massa óssea mantida na coluna lombar">
-	A - Massa óssea mantida na coluna lombar</option>
-<option data-code="4" data-value="Massa óssea mantida no fêmur total">
-	B - Massa óssea mantida no fêmur total</option>
-<option data-code="5" data-value="Perda de densidade óssea de {} ± 2% na coluna lombar">
-	C - Perda de densidade óssea ± 2%</option>
-<option data-code="6" data-value="Perda de densidade óssea de {} ± 3% no fêmur total">
-	D - Perda de densidade óssea ± 3%</option>
-<option data-code="7" data-value="Ganho de densidade óssea de {} ± 2% na coluna lombar">
-	E - Ganho de densidade óssea ± 2%</option>
-<option data-code="8" data-value="Ganho de densidade óssea de {} ± 3% no fêmur total">
-	F - Ganho de densidade óssea ± 3%</option>
-<option data-code="9" data-value="Sugerimos não utilizar a coluna lombar para diagnóstico, classificação de risco de fraturas ou monitorização terapêutica, devido à presença de alterações vertebrais">
-	3 - Sugerimos não utilizar a coluna lombar...</option>
-<option data-code="10" data-value="Sugerimos não utilizar o fêmur proximal para diagnóstico, classificação de risco de fraturas ou monitorização terapêutica, devido à presença alterações estruturais"> 
-	4 - Sugerimos não utilizar o fêmur...</option> 
-<option data-code="11" data-value="Sugerimos utilizar o segmento {} para diagnóstico, classificação de risco de fraturas e monitorização terapêutica, devido à presença de alterações nas outras vértebras analisadas">
-	5 - Sugerimos utilizar o segmento...</option>
-<option data-code="12" data-value="À critério clínico, sugere-se controle com densitometria em {} meses">
-	6 - À critério clínico, sugere-se controle...</otion>
-		</select>
+		<select id="comparacoes"></select>
 		<button id="adicionar-comparacao" class="coi-action-include">Incluir</button>
 		<table id="comparacoes-list"/>
 	<dd>
